# shift

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  .taurignore  AGENTS.md  BUGS.md  Cargo.toml  Claude.md  EDITOR_TOOL_REFACTOR.md  IMPROVEMENTS.md  README.md  REFACTOR_FINDINGS.md  ROADMAP.md  SAVE_AND_GC_PERFORMANCE.md  SELECTION_AKWARD.md  SMALL.md  bun.lockb  dump.json  forge.config.ts  index.html  knip.class.json  knip.json  log.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts  vitest.config.ts
.agent-skills/jsdoc/: SKILL.md
.agent-skills/writing-tests/: SKILL.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.features/: SMALL.md
.github/workflows/: ci.yml  deadcode.yml  perf.yml  pr-clean-caches.yml
.husky/: pre-commit
.summary/: drag-session-refactor-summary-2026-02-20.md  hit-testing-api-review-summary.md
crates/shift-backends/: Cargo.toml
crates/shift-backends/docs/: CONTEXT.md  DOCS.md
crates/shift-backends/src/: atomic.rs  errors.rs  export.rs  font_loader.rs  format.rs  lib.rs  metrics.rs  traits.rs
crates/shift-backends/src/binary/: mod.rs  reader.rs
crates/shift-backends/src/designspace/: axis_labels.rs  error.rs  mod.rs  reader.rs  writer.rs
crates/shift-backends/src/glyphs/: mod.rs  reader.rs
crates/shift-backends/src/shift2fontir/: axes.rs  glyph.rs  kerning.rs  metadata.rs  mod.rs  source.rs  stat.rs  tests.rs
crates/shift-backends/src/ufo/: fontinfo.rs  mod.rs  reader.rs  writer.rs
crates/shift-backends/tests/: export.rs  loading.rs  round_trip.rs
crates/shift-backends/tests/round_trip/: designspace.rs  ufo.rs
crates/shift-bridge/: Cargo.toml  build.rs  dts-header.d.ts  index.d.ts  index.js  package.json
crates/shift-bridge/__test__/: index.spec.mjs
crates/shift-bridge/docs/: DOCS.md
crates/shift-bridge/src/: bridge.rs  errors.rs  input.rs  lib.rs
crates/shift-cli/: Cargo.toml  README.md
crates/shift-cli/src/: authoring.rs  cli.rs  inspect.rs  main.rs
crates/shift-cli/src/authoring/: glyph.rs  tests.rs
crates/shift-cli/src/inspect/: render.rs  report.rs
crates/shift-cli/tests/: authoring_cli.rs  glyph_authoring_cli.rs
crates/shift-core/: Cargo.toml
crates/shift-core/bindings/: MatchedRule.ts  RuleId.ts
crates/shift-core/docs/: CONTEXT.md  DOCS.md  composite-anchors-and-dependency-graph.md
crates/shift-core/src/: binary.rs  composite.rs  constants.rs  contour.rs  curve.rs  dependency_graph.rs  edit_ops.rs  edit_session.rs  entity.rs  font.rs  font_loader.rs  glyph.rs  interpolation.rs  lib.rs  point.rs  snapshot.rs  ufo.rs  vec2.rs
crates/shift-core/src/pattern/: actions.rs  matcher.rs  mod.rs  parser.rs  rules.rs
crates/shift-core/tests/: font_loading.rs  interpolation_parity.rs  round_trip.rs
crates/shift-edit/: Cargo.toml
crates/shift-edit/docs/: DOCS.md
crates/shift-edit/src/: composite.rs  edit_session.rs  error.rs  interpolation.rs  lib.rs  state.rs  vec2.rs
crates/shift-font/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/shift-font/docs/: DOCS.md
crates/shift-font/src/: changes.rs  composite.rs  contour.rs  entity.rs  error.rs  font.rs  font_engine.rs  font_service.rs  glyph.rs  intents.rs  interpolation.rs  layer_edit.rs  lib.rs  otf_ttf.rs  path.rs  projection.rs  state.rs  test_support.rs  types.rs  ufo.rs
crates/shift-font/src/interpolation/: compatibility.rs  metrics.rs  values.rs
crates/shift-font/src/ir/: anchor.rs  axis.rs  binary_data.rs  boolean.rs  collection.rs  component.rs  contour.rs  entity.rs  features.rs  font.rs  glyph.rs  glyph_name.rs  guideline.rs  kerning.rs  layer.rs  lib_data.rs  metrics.rs  mod.rs  named_instance.rs  point.rs  segment.rs  source.rs  variation.rs
crates/shift-ir/: Cargo.toml
crates/shift-ir/docs/: CONTEXT.md  DOCS.md
crates/shift-ir/src/: anchor.rs  axis.rs  component.rs  contour.rs  entity.rs  features.rs  font.rs  glyph.rs  guideline.rs  kerning.rs  lib.rs  lib_data.rs  metrics.rs  point.rs  source.rs  variation.rs
crates/shift-node/: Cargo.toml  dts-header.d.ts  index.d.ts  index.js  package.json  vitest.config.ts
crates/shift-node/.github/workflows/: CI.yml
crates/shift-node/__test__/: font_integration.spec.mjs  index.spec.mjs
crates/shift-node/docs/: CONTEXT.md  DOCS.md
crates/shift-node/src/: edit_session.rs  font_engine.rs  lib.rs  review.md  types.rs
crates/shift-store/: Cargo.toml  README.md
crates/shift-store/src/: change_set.rs  component.rs  connection.rs  error.rs  font.rs  font_state.rs  glyph.rs  layer.rs  lib.rs  outline.rs  schema.rs  source.rs  store.rs  types.rs  workspace_state.rs
crates/shift-store/tests/: store_test.rs
crates/shift-store/tests/fixtures/: old_schema_v1.sql
crates/shift-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crates/shift-tauri/capabilities/: default.json
crates/shift-tauri/src/: commands.rs  core.rs  lib.rs  main.rs  menu.rs  shortcuts.rs
crates/shift-wire/: Cargo.toml
crates/shift-wire/src/: interpolation.rs  lib.rs  preview.rs  state.rs
crates/shift-wire/src/bridges/: mod.rs
crates/shift-wire/src/bridges/napi/: mod.rs
crates/shift-workspace/: Cargo.toml
crates/shift-workspace/docs/: DOCS.md
crates/shift-workspace/src/: ledger.rs  lib.rs  new_workspace.rs  source_identity.rs  workspace.rs
crates/shift-workspace/tests/: workspace_test.rs
docs/: ARCHITECTURE_CONCERNS.md  RULES_ENGINE_ASSESSMENT.md  SERIALIZATION_ARCHITECTURE.md  editor-integration.md  font-editor.monopic
icons/: README.md  icon.icns
scripts/: check-napi-dead-methods.sh  check-slop.sh  clean.sh  context-drift-check.py  find-refs.ts  generate-bridge-types.mjs  icons.sh  patch-generated-types.ts  rebuild_types.sh  sync-agent-skills.mjs  sync-types.js  watch.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: App.tsx  main.tsx  package.json  tsconfig.json  vite.config.ts
(+1303 files in other folders)
