[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.dependencies]
shift-wire = { path = "crates/shift-wire" }
shift-backends = { path = "crates/shift-backends" }
shift-bridge = { path = "crates/shift-bridge" }
shift-edit = { path = "crates/shift-edit" }
shift-ir = { path = "crates/shift-ir" }
shift-store = { path = "crates/shift-store" }
