[package]
name = "shift-backends"
version = "0.1.0"
edition = "2021"
description = "Font format backends for reading and writing various font formats"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
shift-ir = { path = "../shift-ir" }
norad = "0.16.0"
skrifa = "0.32.0"
fontc = "0.2.0"
glyphs-reader = "0.2.0"
plist = "1"
