[package]
edition = "2021"
name = "shift-bridge"
version = "0.0.1"
authors = ["Kostya Farber <kostya.farber@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
shift-edit = { workspace = true }
shift-wire = { workspace = true, features = ["napi"] }
shift-ir = { workspace = true }
shift-backends = { workspace = true }

napi = { version = "=3.8.6", default-features = false, features = ["napi6"] }
napi-derive = "=3.5.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[build-dependencies]
napi-build = "2.1"
