[package]
name = "shift-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line tools for inspecting and compiling Shift source packages"
readme = "README.md"

[dependencies]
anstyle = "1"
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = "7.2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shift-backends = { workspace = true }
shift-font = { workspace = true }
shift-source = { workspace = true }
thiserror = "2"

[dev-dependencies]
shift-font = { workspace = true, features = ["test-support"] }
tempfile = "3"
