[package]
edition = "2021"
name = "shift-core"
version = "0.0.0"

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags = "2.9.1"
fontc = "0.2.0"
norad = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
skrifa = "0.32.0"
ts-rs = "11.0.1"
shift-ir = { path = "../shift-ir" }
shift-backends = { path = "../shift-backends" }
