[package]
name = "shift-font"
version = "0.1.0"
edition = "2021"
description = "Live Rust font authoring model and editing behavior"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
fontdrasil = "0.4.0"
indexmap = { version = "2", features = ["serde"] }
kurbo = "0.13.0"
linesweeper = "0.3.0"
serde = { version = "1.0", features = ["derive", "rc"] }
