[package]
name = "shift-ir"
version = "0.1.0"
edition = "2021"
description = "Intermediate representation for font data - a rich, format-agnostic font model"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
kurbo = "0.13.0"
linesweeper = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
ts-rs = "11.0.1"
