[package]
edition = "2021"
name = "shift-node"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
shift-core = { workspace = true }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8", default-features = false, features = ["napi4"] }
napi-derive = "3.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"
