[package]
name = "shift-tauri"
version = "0.1.0"
description = "shift-tauri"
authors = ["Kostya Farber"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
doctest = false
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shift-tauri"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
log = "0.4"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10.1"

tauri-plugin-log = "2"
tauri-plugin-dialog = "2.2.0"

shift-font.workspace = true
shift-editor.workspace = true
shift-events.workspace = true
